# advent_of_code

./: .gitignore  Pipfile
2017/01/: 01.py  aoc_01.py  test_aoc_01.py
2017/02/: aoc_02_1.py  aoc_02_2.py  aoc_02_input.py
2017/03/: aoc_03.py  aoc_03_2.py  aoc_03_input.py  test_aoc_03.py  test_aoc_03_2.py
2017/04/: aoc_04.py  aoc_04_input.py  test_aoc_04.py
2017/05/: aoc_05.py  aoc_05_input.py  test_aoc_05.py
2017/06/: aoc_06.py  aoc_06_input.py  test_aoc_06.py
2017/07/: aoc_07.py  aoc_07_input.py  test_aoc_07.py  test_aoc_07_input.py
2017/08/: aoc_08.py  aoc_08_input.py  test_aoc_08.py
2017/09/: aoc_09.py  aoc_09_input.py  test_aoc_09.py
2018/01/: aoc_01.py  aoc_01_input.py  test_aoc_01.py
2018/02/: aoc_02.py  aoc_02_input.py  test_aoc_02.py
2018/03/: aoc_03.py  aoc_03_input.py  test_aoc_03.py  test_aoc_03_input.py
2018/04/: aoc_04.py  aoc_04_input.py  test_aoc_04.py
2018/05/: aoc_05.py  aoc_05_input.py  test_aoc_05.py
2018/06/: aoc_06.py  aoc_06_input.py  test_aoc_06.py
2018/07/: aoc_07.py  aoc_07_input.py  test_aoc_07.py
2018/08/: aoc_08.py  aoc_08_input.py  test_aoc_08.py
2019/01/: aoc_01.py  aoc_01_input.py  test_aoc_01.py
2019/02/: aoc_02.py  aoc_02_input.py  input  test_aoc_02.py  test_aoc_02_input.py
2019/03/: aoc_03.py  aoc_03_input.py  test_aoc_03.py  test_aoc_03_input.py
2019/04/: aoc_04.py  test_aoc_04.py
2020/01/: Cargo.toml
2020/02/: Cargo.toml
2020/03/: Cargo.toml
2020/04/: Cargo.toml
2023/aoc-2023-03/: Cargo.toml
2023/aoc-2023-03/benches/: benchmark.rs
2023/aoc-2023-03/src/: main.rs  solver.rs
(+22 files in other folders)
