[package]
name = "aoc-2023-03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
divan = "0.1.8"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
colored = "2.1.0"
dhat = "0.3.2"

[features]
dhat-heap = []
